ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /_health
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
  name: jenkins
  namespace: jenkins
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: jenkins
              servicePort: 8080
            path: /*
            pathType: ImplementationSpecific
